# jetbrain-git

./: .gitignore  BUILD.bazel  NOTICE.txt  README.md  build.xml
.agents/skills/notebook-for-experiment/: SKILL.md
.agents/skills/pseudo-kmp/: SKILL.md
.claude/skills/notebook-for-experiment/: SKILL.md
.claude/skills/pseudo-kmp/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/actions/build_ide/: action.yml
.github/actions/free_disk_space_and_expand_swap/: action.yml
.github/actions/upload_ide/: action.yml
.github/workflows/: IntelliJ_IDEA.yml  ide_build_and_upload.yml  jewel-checks.yml  publish_to_package_managers.yml  tests.yml  winget_release.yml
.ownership/monorepo-resolver/src/: TestOwnerResolver.kt
.ownership/resources/: intellij.codeowners.xml
RegExpSupport/: OWNERSHIP
community-resources/resources/idea/: IdeaApplicationInfo.xml  RebasedApplicationInfo.xml
fleet/lsp.protocol/: .editorconfig
fleet/rpc/: api-dump-experimental.txt
grid/: OWNERSHIP
grid/core-impl/resources/: intellij.grid.core.impl.xml
grid/csv/resources/: intellij.grid.csv.core.impl.xml
grid/impl-ide/resources/: intellij.grid.impl.ide.xml
java/java-frontend/resources/: intellij.java.frontend.xml
java/java-promo/resources/: intellij.java.promo.xml
java/jsp-openapi/resources/: intellij.jsp.xml
lib/: BUILD.bazel  MODULE.bazel
libraries/download-pgp-verifier/: module-content.yaml
libraries/icu4j/: module-content.yaml
libraries/jackson/databind/: module-content.yaml
libraries/jackson/dataformat-toml/: module-content.yaml
libraries/jackson/dataformat-xml/: module-content.yaml
libraries/jackson/dataformat-yaml/: module-content.yaml
libraries/jackson/datatype-jdk8/: module-content.yaml
libraries/jackson/datatype-joda/: module-content.yaml
libraries/jackson/datatype-jsr310/: module-content.yaml
libraries/jackson/jackson/: module-content.yaml
libraries/jackson/module-kotlin/: module-content.yaml
libraries/jackson/validator/: module-content.yaml
libraries/java-compatibility/: module-content.yaml
libraries/jcef/: module-content.yaml
libraries/lz4/: module-content.yaml
native/XPlatLauncher/: Cargo.toml  build.rs
native/XPlatLauncher/resources/: product_info_linux.json  product_info_macos.json  product_info_windows.json
native/XPlatLauncher/src/: java.rs  lib.rs  main.rs  main_win_console.rs
native/XPlatLauncher/tests/: default_tests.rs
notebooks/: OWNERSHIP
platform/analysis-api/resources/: intellij.platform.analysis.xml
platform/analysis-impl/: module-content.yaml
platform/bazel-runfiles/src/: BazelLabel.kt  BazelRunfiles.kt
platform/bootstrap/: module-content.yaml
platform/build-scripts/bazel/: maven_install.json
platform/buildData/: api-dump.txt
platform/buildData/resources/: product-info.schema.json
platform/built-in-server/: exposed-third-party-api.txt
platform/code-style-api/: module-content.yaml
platform/code-style-api/resources/: intellij.platform.codeStyle.xml
platform/compose/resources/: intellij.platform.compose.xml
platform/configuration-store-impl/: module-content.yaml
platform/configuration-store-impl/src/: ComponentInitializationListener.kt  ComponentStoreImpl.kt  CompoundOperationListener.kt  XmlElementStorage.kt
platform/credential-store/: module-content.yaml
platform/credential-store-ui/resources/: intellij.platform.credentialStore.ui.xml
platform/credential-store/resources/: intellij.platform.credentialStore.xml
platform/diff-api/resources/: intellij.platform.diff.xml
platform/duplicates-analysis/resources/: intellij.platform.duplicates.analysis.xml
platform/dvcs-api/resources/: intellij.platform.vcs.dvcs.xml
platform/editor-ui-api/: module-content.yaml
platform/editor-ui-ex/: module-content.yaml
platform/eel/: api-dump.txt
platform/eel-impl/: module-content.yaml
platform/eel-nioFs/: api-dump-experimental.txt  api-dump.txt
platform/eel-nioFs-impl/: module-content.yaml
platform/eel-provider/: api-dump-experimental.txt  api-dump.txt
platform/favoritesTreeView/: module-content.yaml
platform/jps-bootstrap/: jps-bootstrap.cmd  jps-bootstrap.sh
platform/lang-api/: exposed-third-party-api.txt  module-content.yaml
platform/lvcs-api/: module-content.yaml
platform/macro/: module-content.yaml
platform/macro/resources/: intellij.platform.macro.xml
platform/markdown-utils/: module-content.yaml
platform/ml-api/: module-content.yaml
platform/non-modal-welcome-screen/: module-content.yaml
platform/platform-api/: exposed-third-party-api.txt  module-content.yaml
platform/projectModel-api/: api-dump.txt
platform/rd-platform-community/: module-content.yaml
platform/remote-core/: module-content.yaml
platform/remoteDev-util/: module-content.yaml
platform/smRunner/: api-dump.txt
platform/structuralsearch/: OWNERSHIP
platform/structure-view-impl/: api-dump-experimental.txt
platform/threadDumpParser/: module-content.yaml
platform/ui.jcef/: exposed-third-party-api.txt
platform/usageView/: module-content.yaml
platform/usageView-impl/: module-content.yaml
platform/util/: exposed-third-party-api.txt
platform/vcs-impl/: exposed-third-party-api.txt
plugins/ByteCodeViewer/: OWNERSHIP
plugins/agent-workbench/: AGENTS.md
plugins/coverage-common/: api-dump.txt
plugins/git4idea/: OWNERSHIP
plugins/gradle/: BUILD.bazel
plugins/groovy/: OWNERSHIP
plugins/java-decompiler/: OWNERSHIP
plugins/lombok/: OWNERSHIP
plugins/properties/: OWNERSHIP
plugins/settings-sync/: OWNERSHIP
plugins/testng_rt/: OWNERSHIP
plugins/textmate/: bundles.patch  loadVSCBundles.main.kts  loadVSCBundles.sh
python/helpers/: read_package_metadata.py
python/helpersTests/: run_python2_tests.sh  testing.py
python/pluginResources/: intellij.python.community.impl.xml
python/python-pyproject/testData/monorepo/uv_workspace_extras_and_transitive/sub-projects/sub-project-a/: pyproject.toml
spellchecker/resources/: intellij.spellchecker.xml
tools/intellij.tools.ide.starter/: README.md
tools/lexer/: idea-flex-kotlin.skeleton
uast/: OWNERSHIP
(+3709 files in other folders)
