load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library", "kt_javac_options")
load("//build:compiler-options.bzl", "create_kotlinc_options")

format_multirun(
    name = "format",
    starlark = "@buildifier_prebuilt//:buildifier",
    visibility = ["//visibility:public"],
)

exports_files(
    glob(["**/*.iml"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "jps_to_bazel_community_model_root_files",
    srcs = [
        ".idea/kotlinc.xml",
        ".idea/misc.xml",
        ".idea/modules.xml",
    ] + glob([".idea/libraries/*.xml"]),
    visibility = ["//visibility:public"],
)

kt_javac_options(
    name = "default-javac-opts",
    no_proc = True,
)

create_kotlinc_options(
    name = "k8",
    jvm_target = "8",
)

create_kotlinc_options(
    name = "k11",
    jvm_target = "11",
)

create_kotlinc_options(
    name = "k17",
    jvm_target = "17",
)

create_kotlinc_options(
    name = "k21",
    jvm_target = "21",
)

create_kotlinc_options(
    name = "k25",
    jvm_target = "25",
)

java_binary(
    name = "main_run",
    jvm_flags = [
        "--add-opens=java.base/java.io=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
        "--add-opens=java.base/java.net=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
        "--add-opens=java.base/java.text=ALL-UNNAMED",
        "--add-opens=java.base/java.time=ALL-UNNAMED",
        "--add-opens=java.base/java.util=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
        "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
        "--add-opens=java.base/sun.net.dns=ALL-UNNAMED",
        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
        "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
        "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
        "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED",
        "--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text.html.parser=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.swing.text=ALL-UNNAMED",
        "--add-opens=java.management/sun.management=ALL-UNNAMED",
        "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
        "--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
        "-Didea.home.path=$${BUILD_WORKSPACE_DIRECTORY}",
        # same as .idea/runConfigurations/IDEA.xml:
        "-Xmx2g",
        "-XX:MaxJavaStackTraceDepth=10000",
        "-XX:+AllowEnhancedClassRedefinition",
        "-XX:PrintIdealGraphLevl=3",
        "-XX:+IgnoreUnrecognizedVMOptions",
        "-ea",
        "-Dsun.io.useCanonCaches=false",
        "-Dsun.awt.disablegrab=true",
        "-Dsun.java2d.metal=true",
        "-Dapple.laf.useScreenMenuBar=true",
        "-Djdk.attach.allowAttachSelf",
        "-Djdk.module.illegalAccess.silent=true",
        "-DjbScreenMenuBar.enabled=true",
        "-Didea.jre.check=true",
        "-Didea.is.internal=true",
        "-Didea.debug.mode=true",
        "-Didea.config.path=$${BUILD_WORKSPACE_DIRECTORY}/config/idea",
        "-Didea.system.path=$${BUILD_WORKSPACE_DIRECTORY}/system/idea",
        "-Didea.diagnostic.opentelemetry.file=opentelemetry.json",
        "-Dfus.internal.test.mode=true",
        "-Dcompose.swing.render.on.graphics=true",
    ],
    main_class = "com.intellij.idea.Main",
    runtime_deps = [":main"],
)

## used to determine community root path in the test
## see community/build/tests-options.bzl
exports_files(["intellij.idea.community.main.iml"])

### auto-generated section `build intellij.idea.community.main` start

jvm_library(
    name = "main",
    srcs = glob(
        [],
        allow_empty = True,
    ),
    module_name = "intellij.idea.community.main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        # do not sort,
        "//platform/main/intellij.platform.monolith.main:monolith-main",
        "//platform/diff-api:diff",
        "//platform/diff-impl",
        "//platform/extensions",
        "//platform/icons",
        "//platform/lang-api:lang",
        "//platform/lang-impl",
        "//platform/lvcs-api:lvcs",
        "//platform/lvcs-impl",
        "//platform/platform-api:ide",
        "//platform/platform-impl:ide-impl",
        "//platform/starter",
        "//platform/util",
        "//platform/vcs-api:vcs",
        "//platform/vcs-impl",
        "//platform/vcs-impl/exec",
        "//platform/vcs-impl/lang",
        "//platform/vcs-impl/lang/actions",
        "//community-resources:customization",
        "//plugins/git4idea/backend",
        "//plugins/git4idea/shared",
        "//plugins/git4idea/frontend",
        "//images",
        "//plugins/github/github-core:vcs-github",
        "//plugins/terminal",
        "//plugins/terminal/frontend",
        "//plugins/terminal/backend",
        "//plugins/terminal/sh",
        "//plugins/emojipicker",
        "//platform/smart-update",
        "//platform/execution-process-elevation",
        "//plugins/gitlab/gitlab-core:vcs-gitlab",
        "//plugins/github/github-tracker:vcs-github-tracker",
        "//plugins/git-modal-commit:vcs-git-commit-modal",
    ],
)

jvm_library(
    name = "main_test_lib",
    testonly = True,
    srcs = glob(
        [],
        allow_empty = True,
    ),
    module_name = "intellij.idea.community.main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        # do not sort,
        ":main",
        "//platform/main/intellij.platform.monolith.main:monolith-main_test_lib",
        "//platform/diff-api:diff_test_lib",
        "//platform/diff-impl:diff-impl_test_lib",
        "//platform/extensions:extensions_test_lib",
        "//platform/icons:icons_test_lib",
        "//platform/lang-api:lang_test_lib",
        "//platform/lang-impl:lang-impl_test_lib",
        "//platform/lvcs-api:lvcs_test_lib",
        "//platform/lvcs-impl:lvcs-impl_test_lib",
        "//platform/platform-api:ide_test_lib",
        "//platform/platform-impl:ide-impl_test_lib",
        "//platform/starter:starter_test_lib",
        "//platform/util:util_test_lib",
        "//platform/vcs-api:vcs_test_lib",
        "//platform/vcs-impl:vcs-impl_test_lib",
        "//platform/vcs-impl/exec:exec_test_lib",
        "//platform/vcs-impl/lang:lang_test_lib",
        "//platform/vcs-impl/lang/actions:actions_test_lib",
        "//community-resources:customization_test_lib",
        "//plugins/git4idea/backend:backend_test_lib",
        "//plugins/git4idea/shared:shared_test_lib",
        "//plugins/git4idea/frontend:frontend_test_lib",
        "//images:images_test_lib",
        "//plugins/github/github-core:vcs-github_test_lib",
        "//plugins/terminal:terminal_test_lib",
        "//plugins/terminal/frontend:frontend_test_lib",
        "//plugins/terminal/backend:backend_test_lib",
        "//plugins/terminal/sh:sh_test_lib",
        "//plugins/emojipicker:emojipicker_test_lib",
        "//platform/smart-update:smart-update_test_lib",
        "//platform/execution-process-elevation:execution-process-elevation_test_lib",
        "//plugins/gitlab/gitlab-core:vcs-gitlab_test_lib",
        "//plugins/github/github-tracker:vcs-github-tracker_test_lib",
        "//plugins/git-modal-commit:vcs-git-commit-modal_test_lib",
    ],
)
### auto-generated section `build intellij.idea.community.main` end

### auto-generated section `iml intellij.idea.community.main` start
exports_files(
    [
        "intellij.idea.community.main.iml",
    ],
    visibility = ["//visibility:public"],
)
### auto-generated section `iml intellij.idea.community.main` end

### auto-generated section `build intellij.idea.community.main.tests` start

jvm_library(
    name = "main-tests",
    srcs = glob(
        [],
        allow_empty = True,
    ),
    module_name = "intellij.idea.community.main.tests",
    visibility = ["//visibility:public"],
)

jvm_library(
    name = "main-tests_test_lib",
    testonly = True,
    srcs = glob(
        [],
        allow_empty = True,
    ),
    module_name = "intellij.idea.community.main.tests",
    visibility = ["//visibility:public"],
    runtime_deps = [
        # do not sort,
        ":main-tests",
        "//:main",
        "//:main_test_lib",
        "//jps/model-serialization:model-serialization-tests",
        "//jps/model-serialization:model-serialization-tests_test_lib",
        "//platform/platform-tests:tests",
        "//platform/platform-tests:tests_test_lib",
        "//platform/diff-impl/tests",
        "//platform/diff-impl/tests:tests_test_lib",
        "//platform/build-scripts/icons:images-build",
        "//platform/build-scripts/icons:images-build_test_lib",
        "//platform/workspace/storage/tests",
        "//platform/workspace/storage/tests:tests_test_lib",
        "//plugins/textmate/plugin",
        "//plugins/textmate/plugin:plugin_test_lib",
        "//plugins/textmate/backend",
        "//plugins/textmate/backend:backend_test_lib",
        "//plugins/commander",
        "//plugins/commander:commander_test_lib",
        "//plugins/configuration-script",
        "//plugins/configuration-script:configuration-script_test_lib",
        "//plugins/configuration-script:configurationScript-test-java",
        "//plugins/configuration-script:configurationScript-test-java_test_lib",
        "//plugins/textmate/tests",
        "//plugins/textmate/tests:tests_test_lib",
        "//plugins/git4idea/terminal",
        "//plugins/git4idea/terminal:terminal_test_lib",
        "//platform/instanceContainer:instanceContainer-tests",
        "//platform/instanceContainer:instanceContainer-tests_test_lib",
        "//platform/polySymbols:polySymbols-tests",
        "//platform/polySymbols:polySymbols-tests_test_lib",
        "//images:images-tests",
        "//images:images-tests_test_lib",
        "//RegExpSupport:regexp-tests",
        "//RegExpSupport:regexp-tests_test_lib",
        "//platform/settings-local:settings-local-tests",
        "//platform/settings-local:settings-local-tests_test_lib",
        "//platform/vcs-impl/frontend:vcs-impl-frontend-tests",
        "//platform/vcs-impl/frontend:vcs-impl-frontend-tests_test_lib",
        "//platform/vcs-impl/shared:vcs-impl-shared-tests",
        "//platform/vcs-impl/shared:vcs-impl-shared-tests_test_lib",
        "//platform/vcs-impl:vcs-impl-tests",
        "//platform/vcs-impl:vcs-impl-tests_test_lib",
        "//plugins/git4idea/intellij.vcs.git.coverage:vcs-git-coverage",
        "//plugins/git4idea/intellij.vcs.git.coverage:vcs-git-coverage_test_lib",
        "//build/launch",
        "//build/launch:launch_test_lib",
        "//platform/core-nio-fs:core-nio-fs-tests",
        "//platform/core-nio-fs:core-nio-fs-tests_test_lib",
        "//platform/eel:eel-tests",
        "//platform/eel:eel-tests_test_lib",
        "//platform/icons-impl/intellij/tests",
        "//platform/icons-impl/intellij/tests:tests_test_lib",
        "//platform/testFramework/selfContainedProjects",
        "//platform/testFramework/selfContainedProjects:selfContainedProjects_test_lib",
        "//tools/tests",
        "//tools/tests:tests_test_lib",
        "//plugins/turboComplete:turboComplete-tests",
        "//plugins/turboComplete:turboComplete-tests_test_lib",
        "//java/ide-customization:ide-customization-tests",
        "//java/ide-customization:ide-customization-tests_test_lib",
        "//platform/util/concurrency:concurrency-tests",
        "//platform/util/concurrency:concurrency-tests_test_lib",
        "//platform/backend/observation:observation-tests",
        "//platform/backend/observation:observation-tests_test_lib",
        "//platform/collaboration-tools:collaborationTools-tests",
        "//platform/collaboration-tools:collaborationTools-tests_test_lib",
        "//platform/credential-store-impl:credentialStore-impl-tests",
        "//platform/credential-store-impl:credentialStore-impl-tests_test_lib",
        "//platform/diagnostic/freezeAnalyzer:freezeAnalyzer-tests",
        "//platform/diagnostic/freezeAnalyzer:freezeAnalyzer-tests_test_lib",
        "//platform/external-process-auth-helper:externalProcessAuthHelper-tests",
        "//platform/external-process-auth-helper:externalProcessAuthHelper-tests_test_lib",
        "//platform/platform-impl/concurrency:ide-concurrency-tests",
        "//platform/platform-impl/concurrency:ide-concurrency-tests_test_lib",
        "//platform/build-scripts/usages:buildScripts-usages-tests",
        "//platform/build-scripts/usages:buildScripts-usages-tests_test_lib",
        "//platform/ijent:ijent-tests",
        "//platform/ijent:ijent-tests_test_lib",
        "//platform/build-scripts/icons:images-build-tests",
        "//platform/build-scripts/icons:images-build-tests_test_lib",
        "//platform/inspect:inspect-tests",
        "//platform/inspect:inspect-tests_test_lib",
        "//platform/jewel/decorated-window:decoratedWindow-tests",
        "//platform/jewel/decorated-window:decoratedWindow-tests_test_lib",
        "//platform/jewel/foundation:foundation-tests",
        "//platform/jewel/foundation:foundation-tests_test_lib",
        "//platform/jewel/ide-laf-bridge:ideLafBridge-tests",
        "//platform/jewel/ide-laf-bridge:ideLafBridge-tests_test_lib",
        "//platform/jewel/markdown/core:jewel-markdown-core-tests",
        "//platform/jewel/markdown/core:jewel-markdown-core-tests_test_lib",
        "//platform/jewel/markdown/extensions/autolink:jewel-markdown-extensions-autolink-tests",
        "//platform/jewel/markdown/extensions/autolink:jewel-markdown-extensions-autolink-tests_test_lib",
        "//platform/jewel/markdown/extensions/gfm-alerts:jewel-markdown-extensions-gfmAlerts-tests",
        "//platform/jewel/markdown/extensions/gfm-alerts:jewel-markdown-extensions-gfmAlerts-tests_test_lib",
        "//platform/jewel/markdown/extensions/gfm-tables:jewel-markdown-extensions-gfmTables-tests",
        "//platform/jewel/markdown/extensions/gfm-tables:jewel-markdown-extensions-gfmTables-tests_test_lib",
        "//platform/jewel/markdown/extensions/images:jewel-markdown-extensions-images-tests",
        "//platform/jewel/markdown/extensions/images:jewel-markdown-extensions-images-tests_test_lib",
        "//platform/jewel/ui:ui-tests",
        "//platform/jewel/ui:ui-tests_test_lib",
        "//platform/lvcs-impl:lvcs-impl-tests",
        "//platform/lvcs-impl:lvcs-impl-tests_test_lib",
        "//platform/markdown-utils:markdown-utils-tests",
        "//platform/markdown-utils:markdown-utils-tests_test_lib",
        "//platform/build-scripts/product-dsl/plugin-graph:pluginGraph-tests",
        "//platform/build-scripts/product-dsl/plugin-graph:pluginGraph-tests_test_lib",
        "//platform/pluginSystem/parser/impl:pluginSystem-parser-impl-tests",
        "//platform/pluginSystem/parser/impl:pluginSystem-parser-impl-tests_test_lib",
        "//platform/sqlite:sqlite-tests",
        "//platform/sqlite:sqlite-tests_test_lib",
        "//platform/syntax/syntax-extensions:extensions-tests",
        "//platform/syntax/syntax-extensions:extensions-tests_test_lib",
        "//platform/syntax/syntax-i18n:i18n-tests",
        "//platform/syntax/syntax-i18n:i18n-tests_test_lib",
        "//platform/syntax/syntax-api:tests",
        "//platform/syntax/syntax-api:tests_test_lib",
        "//platform/syntax/syntax-util:util-tests",
        "//platform/syntax/syntax-util:util-tests_test_lib",
        "//platform/testFramework/selfContainedProjects:selfContainedProjects-tests",
        "//platform/testFramework/selfContainedProjects:selfContainedProjects-tests_test_lib",
        "//platform/testFramework:testFramework-tests",
        "//platform/testFramework:testFramework-tests_test_lib",
        "//platform/threadDumpParser:threadDumpParser-tests",
        "//platform/threadDumpParser:threadDumpParser-tests_test_lib",
        "//platform/util/text-matching:text-matching-tests",
        "//platform/util/text-matching:text-matching-tests_test_lib",
        "//platform/vcs-api/vcs-api-core:vcs-core-tests",
        "//platform/vcs-api/vcs-api-core:vcs-core-tests_test_lib",
        "//platform/dvcs-impl:vcs-dvcs-impl-tests",
        "//platform/dvcs-impl:vcs-dvcs-impl-tests_test_lib",
        "//platform/searchEverywhere/backend:backend-tests",
        "//platform/searchEverywhere/backend:backend-tests_test_lib",
        "//platform/searchEverywhere/frontend:frontend-tests",
        "//platform/searchEverywhere/frontend:frontend-tests_test_lib",
        "//plugins/search-everywhere-lucene/backend:searchEverywhereLucene-backend-tests",
        "//plugins/search-everywhere-lucene/backend:searchEverywhereLucene-backend-tests_test_lib",
        "//platform/settings-sync-core:settingsSync-core-tests",
        "//platform/settings-sync-core:settingsSync-core-tests_test_lib",
        "//plugins/settings-sync/jba:settingsSync-tests",
        "//plugins/settings-sync/jba:settingsSync-tests_test_lib",
        "//plugins/textmate/joni:joni-tests",
        "//plugins/textmate/joni:joni-tests_test_lib",
        "//plugins/performanceTesting/event-bus:tools-ide-starter-bus-tests",
        "//plugins/performanceTesting/event-bus:tools-ide-starter-bus-tests_test_lib",
        "//plugins/github/github-core:vcs-github-tests",
        "//plugins/github/github-core:vcs-github-tests_test_lib",
        "//plugins/github/github-tracker:vcs-github-tracker-tests",
        "//plugins/github/github-tracker:vcs-github-tracker-tests_test_lib",
        "//plugins/gitlab/gitlab-core:vcs-gitlab-tests",
        "//plugins/gitlab/gitlab-core:vcs-gitlab-tests_test_lib",
        "//plugins/gitlab/gitlab-yaml:vcs-gitlab-yaml-tests",
        "//plugins/gitlab/gitlab-yaml:vcs-gitlab-yaml-tests_test_lib",
        "//platform/execution-process-mediator/client:execution-process-mediator-client-tests",
        "//platform/execution-process-mediator/client:execution-process-mediator-client-tests_test_lib",
        "//platform/execution-process-mediator/common:execution-process-mediator-common-tests",
        "//platform/execution-process-mediator/common:execution-process-mediator-common-tests_test_lib",
        "//java/structuralsearch-java:structuralSearch-tests",
        "//java/structuralsearch-java:structuralSearch-tests_test_lib",
        "//platform/util-rt:util-rt-tests",
        "//platform/util-rt:util-rt-tests_test_lib",
        "//plugins/git4idea/intellij.vcs.git.coverage:vcs-git-coverage-tests",
        "//plugins/git4idea/intellij.vcs.git.coverage:vcs-git-coverage-tests_test_lib",
        "//plugins/git4idea/terminal:vcs-git-terminal-tests",
        "//plugins/git4idea/terminal:vcs-git-terminal-tests_test_lib",
        "//plugins/repository-search/completion:repository-search-completion-tests",
        "//plugins/repository-search/completion:repository-search-completion-tests_test_lib",
        "//platform/vcs-tests:vcs-tests-main",
        "//platform/vcs-tests:vcs-tests-main_test_lib",
        "//platform/exploratory-tests:exploratory-tests-main",
        "//platform/exploratory-tests:exploratory-tests-main_test_lib",
        "//platform/discoverability:discoverability-tests",
        "//platform/discoverability:discoverability-tests_test_lib",
    ],
)
### auto-generated section `build intellij.idea.community.main.tests` end

### auto-generated section `iml intellij.idea.community.main.tests` start
exports_files(
    [
        "intellij.idea.community.main.tests.iml",
    ],
    visibility = ["//visibility:public"],
)
### auto-generated section `iml intellij.idea.community.main.tests` end
